Fix vertical alignment of filter checkboxes in search modal (#657)

--- a/src/search.css
+++ b/src/search.css
@@ -375,8 +375,13 @@ div.hit-block .hit-block-heading-container svg {
   margin: 0 0 0 15px;
 }
 
+:host > div .filters li input {
+  vertical-align: middle;
+}
+
 :host > div .filters li label {
   padding: 3px;
+  cursor: pointer;
 }
 
 :host > div .filters label {
